# LocalNetDev

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md  ble.c  blue  example_bluetooth_networking.c  main.c
bluetooth/: bluetooth.c  bluetooth.h  bluetooth_transport.c  bluetooth_transport.h
encryption/: encryption.c  encryption.h
handlers/: handlers.c  handlers.h
mesh/: mesh_network.c  mesh_network.h
protocol/: protocol.c  protocol.h
routing/: routing.c  routing.h
tests/: test_encryption.c  test_mesh_routing.c  test_protocol.c  test_routing.c
utils/: utils.c  utils.h
